# noir

./: .editorconfig  .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
client/consensus/: Cargo.toml
client/consensus/pow/: Cargo.toml
client/consensus/pow/src/: aux_schema.rs  digests.rs  lib.rs  worker.rs
client/consensus/src/: lib.rs
composable/vm-wasmi/: Cargo.toml
composable/vm-wasmi/src/: host_functions.rs  semantic.rs  vm.rs
core-primitives/: Cargo.toml
core-primitives/src/: lib.rs
frame/account-alias-registry/: Cargo.toml
frame/account-alias-registry/src/: lib.rs  weights.rs
frame/alias/: Cargo.toml
frame/alias/src/: lib.rs  weights.rs
frame/babel/: Cargo.toml
frame/babel/src/: cosmos.rs  ethereum.rs  extensions.rs  lib.rs  mock.rs  tests.rs  traits.rs
frame/babel/src/cosmos/: address.rs  asset.rs  mod.rs  msg.rs  precompile.rs
frame/babel/src/ethereum/: mod.rs  precompile.rs  precompiles.rs
frame/babel/src/extensions/: mod.rs  unify_account.rs
frame/cosmos/: Cargo.toml
frame/cosmos/rpc/: Cargo.toml
frame/cosmos/rpc/src/: cosmos.rs  lib.rs
frame/cosmos/runtime-api/: Cargo.toml
frame/cosmos/runtime-api/src/: lib.rs
frame/cosmos/src/: lib.rs  types.rs  weights.rs
frame/cosmos/types/: Cargo.toml
frame/cosmos/types/src/: address.rs  coin.rs  context.rs  errors.rs  events.rs  gas.rs  handler.rs  lib.rs  macros.rs  msgservice.rs  tx.rs  tx_msgs.rs
frame/cosmos/types/src/coin/: mod.rs  traits.rs
frame/cosmos/types/src/context/: mod.rs  traits.rs
frame/cosmos/types/src/events/: mod.rs  traits.rs
frame/cosmos/types/src/gas/: mod.rs  traits.rs
frame/cosmos/types/src/msgservice/: mod.rs  traits.rs
frame/cosmos/x/auth/: Cargo.toml
frame/cosmos/x/auth/migrations/: Cargo.toml
frame/cosmos/x/auth/signing/: Cargo.toml
frame/cosmos/x/auth/src/: basic.rs  fee.rs  lib.rs  msg.rs  sigverify.rs
frame/cosmos/x/bank/: Cargo.toml
frame/cosmos/x/bank/src/: gas.rs  lib.rs
frame/cosmos/x/bank/types/: Cargo.toml
frame/cosmos/x/wasm/: Cargo.toml
frame/cosmos/x/wasm/src/: error.rs  lib.rs  msgs.rs
frame/cosmos/x/wasm/types/: Cargo.toml
frame/multimap/: Cargo.toml
frame/multimap/src/: lib.rs  mock.rs  tests.rs  traits.rs
frame/multimap/src/traits/: in_mem.rs
frame/rewards/: Cargo.toml
frame/rewards/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
frame/solana/: Cargo.toml
frame/solana/runtime/: Cargo.toml
frame/solana/runtime-api/: Cargo.toml
frame/solana/runtime-api/src/: account.rs  balance.rs  error.rs  fee.rs  lib.rs  transaction.rs
frame/solana/runtime/src/: account.rs  balance.rs  fee.rs  lib.rs  transaction.rs
frame/solana/src/: lib.rs  mock.rs  tests.rs  types.rs
frame/solana/src/programs/: mod.rs
frame/solana/src/runtime/: account.rs  account_loader.rs  account_overrides.rs  account_rent_state.rs  bank.rs  invoke_context.rs  lamports.rs  loaded_programs.rs  log_collector.rs  message_processor.rs  meta.rs  mod.rs  native_loader.rs  nonce_account.rs  nonce_info.rs  program_loader.rs  rbpf.rs  rent_collector.rs  rollback_accounts.rs  sysvar_cache.rs  transaction_account_state_info.rs  transaction_context.rs  transaction_error_metrics.rs  transaction_processing_callback.rs  transaction_processor.rs  transaction_results.rs
frame/solana/src/svm/: account_loader.rs  account_overrides.rs  account_rent_state.rs  message_processor.rs  mod.rs  nonce_info.rs  program_loader.rs  rollback_accounts.rs  runtime_config.rs  transaction_account_state_info.rs  transaction_error_metrics.rs  transaction_processing_callback.rs  transaction_processor.rs  transaction_results.rs
frame/wtema/: Cargo.toml
frame/wtema/src/: lib.rs
node/: Cargo.toml  build.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs  main.rs  rpc.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
primitives/arithmetic/: Cargo.toml
primitives/arithmetic/src/: lib.rs  traits.rs
primitives/babel/: Cargo.toml
primitives/babel/src/: lib.rs
primitives/cosmos/: Cargo.toml
primitives/cosmos/src/: lib.rs  traits.rs
primitives/crypto/: Cargo.toml
primitives/crypto/src/: bip32.rs  ecdsa.rs  es256.rs  es256k.rs  lib.rs  p256.rs  webauthn.rs
primitives/crypto/src/bip32/: k1.rs  r1.rs
primitives/ethereum/: Cargo.toml
primitives/ethereum/src/: lib.rs
primitives/io/: Cargo.toml
primitives/io/src/: lib.rs
primitives/multimap/: Cargo.toml
primitives/multimap/src/: in_mem.rs  lib.rs  traits.rs
primitives/nostr/: Cargo.toml
primitives/nostr/src/: lib.rs
primitives/rewards/: Cargo.toml
primitives/rewards/src/: inherents.rs  lib.rs
primitives/runtime/: Cargo.toml
primitives/runtime/src/: account_name.rs  accountid32.rs  accountname.rs  generic.rs  lib.rs  multikey.rs  self_contained.rs  traits.rs  universal.rs  universaladdress.rs  v2.rs
primitives/runtime/src/generic/: mod.rs  unchecked_extrinsic.rs
primitives/runtime/src/multi/: mod.rs  signature.rs  signer.rs
primitives/runtime/src/self_contained/: mod.rs  unchecked_extrinsic.rs
primitives/solana/: Cargo.toml
primitives/solana/src/: account.rs  clock.rs  commitment_config.rs  config.rs  epoch_info.rs  filter.rs  instruction_error.rs  lib.rs  response.rs  transaction_error.rs
runtime/: Cargo.toml  build.rs
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs  unit.rs  units.rs
runtime/solochain/: Cargo.toml
runtime/solochain/src/: apis.rs  call.rs  lib.rs  prelude.rs  primitives.rs  version.rs
runtime/solochain/src/configs/: address_map.rs  aura.rs  babel.rs  balances.rs  base_fee.rs  ethereum.rs  evm.rs  grandpa.rs  mod.rs  sudo.rs  system.rs  timestamp.rs  transaction_payment.rs
runtime/src/: account_name.rs  compat.rs  lib.rs  precompiles.rs
runtime/src/compat/: cosm.rs  ethereum.rs  evm.rs
sidecar/: .eslintrc  .gitignore  (+4 more)
ziggurat/node/: Cargo.toml
ziggurat/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
ziggurat/node/src/cosmos/: mod.rs  rpc.rs
ziggurat/node/src/eth/: backend.rs  config.rs  mod.rs  rpc.rs
(+101 files in other folders)
