[workspace.package]
authors = ["Haderech Pte. Ltd."]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/noirhq/noir.git"

[workspace]
resolver = "2"
members = [
	"client/consensus/pow",
	"core-primitives",
	"frame/babel",
	"frame/cosmos",
	"frame/cosmos/types",
	"frame/cosmos/rpc",
	"frame/cosmos/runtime-api",
	"frame/cosmos/x/auth",
	"frame/cosmos/x/auth/migrations",
	"frame/cosmos/x/auth/signing",
	"frame/cosmos/x/bank",
	"frame/cosmos/x/bank/types",
	"frame/cosmos/x/wasm",
	"frame/cosmos/x/wasm/types",
	"frame/multimap",
	"frame/solana",
	"frame/solana/runtime-api",
	"frame/wtema",
	"primitives/babel",
	"primitives/consensus", # dummy
	"primitives/consensus/pow",
	"primitives/cosmos",
	"primitives/ethereum",
	"primitives/multimap",
	"primitives/nostr",
	"primitives/runtime",
	"primitives/solana",
	"runtime/common",
	"vendor/composable/composable-support",
	"vendor/composable/vm",
	"vendor/composable/vm-wasmi",
	"vendor/cosmwasm/std",
	"vendor/composable/cosmwasm",
	"vendor/composable/cosmwasm/rpc",
	"vendor/composable/cosmwasm/runtime-api",
	"vendor/moonbeam/precompiles/assets-erc20",
	"vendor/moonbeam/precompiles/balances-erc20",
	"vendor/solana/compute-budget",
	"vendor/solana/curves/curve25519",
	"vendor/solana/inline-spl",
	"vendor/solana/measure",
	"vendor/solana/metrics",
	"vendor/solana/poseidon",
	"vendor/solana/program-runtime",
	"vendor/solana/programs/address-lookup-table",
	"vendor/solana/programs/bpf_loader",
	"vendor/solana/programs/compute-budget",
	"vendor/solana/programs/loader-v4",
	"vendor/solana/programs/system",
	"vendor/solana/programs/token",
	"vendor/solana/rpc-client-api",
]
default-members = [
	"client/consensus/pow",
	"core-primitives",
	"frame/*",
	"primitives/*",
	"runtime/common",
]

[workspace.lints.clippy]
useless_conversion = "allow"

[workspace.dependencies]
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
assert_matches = "1.5.0"
async-trait = "0.1"
base64 = { version = "0.22", default-features = false }
bech32 = { version = "0.11", default-features = false }
bincode = { package = "solana-bincode", git = "https://github.com/noirhq/solana-sdk", branch = "v2.0", default-features = false }
bnum = { version = "0.11.0", default-features = false }
bs58 = { version = "0.5.1", default-features = false }
buidl = { version = "0.2", default-features = false, features = ["derive"] }
bytemuck = "1.16.1"
bytemuck_derive = "1.7.0"
byteorder = { version = "1.5.0", default-features = false }
chrono = { version = "0.4", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6", default-features = false }
const-hex = { version = "1.13", default-features = false }
cosmos-sdk-proto = { version = "0.24", default-features = false }
cosmwasm-core = { version = "2.1.3", default-features = false }
cosmwasm-crypto = "2.1.3"
cosmwasm-derive = { version = "2.1.3", default-features = false }
cosmwasm-schema = "2.1.3"
crc32fast = "1.3.2"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
cw20-ics20 = "2.0"
derive_more = { version = "1.0", default-features = false }
derive-where = "1.2"
eager = "0.1.0"
either = { version = "1.8", default-features = false }
enum-iterator = "1.5.0"
env_logger = "0.9"
ethereum = { version = "0.15.0", default-features = false }
futures = "0.3"
futures-timer = "3.0"
getrandom = { version = "0.2", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4"
ibc = { version = "0.54.0", default-features = false }
impl-trait-for-tuples = { version = "0.2.2" }
itertools = { version = "0.12.1", default-features = false }
jsonrpsee = { version = "0.24" }
k256 = { version = "0.13", default-features = false }
libflate = { git = "https://github.com/nostd-rs/libflate", branch = "nostd", default-features = false }
libsecp256k1 = { version = "0.6.0", default-features = false }
light-poseidon = "0.2.0"
log = { version = "0.4", default-features = false }
memoffset = "0.9"
nostd = "0.1.2"
num = { version = "0.4.3", default-features = false }
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
num_enum = { version = "0.7", default-features = false }
parity-scale-codec = { version = "3.6", default-features = false }
parity-wasm = { version = "0.45.0", default-features = false }
parking_lot = "0.12"
paste = "1.0"
percentage = "0.1.0"
rand = { version = "0.8.5", default-features = false }
ripemd = { version = "0.1", default-features = false }
rustc_version = "0.4"
scale-info = { version = "2.11", default-features = false }
schemars = { version = "1.0.0-alpha.5", default-features = false }
scopeguard = { version = "1.2.0", default-features = false }
serde = { version = "1.0.203", default-features = false }
serde_json = { version = "1.0.134", default-features = false }
serde-json-wasm = { version = "1.0", default-features = false }
serde_derive = { version = "1.0.203", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
slices = "0.2"
smallvec = "1.13"
solana-frozen-abi = "=2.0.18"
solana-frozen-abi-macro = "=2.0.18"
solana-logger = "=2.0.18"
solana-program = { git = "https://github.com/noirhq/solana-sdk", branch = "v2.0", default-features = false }
solana-sdk = { git = "https://github.com/noirhq/solana-sdk", branch = "v2.0", default-features = false }
solana_rbpf = { git = "https://github.com/noirhq/solana-sdk", branch = "v2.0", default-features = false }
static_assertions = "1.1"
test-case = "3.3.1"
thiserror = { version = "2.0", default-features = false }
vec1 = { version = "*", default-features = false }
wasmi = { version = "0.30.0", default-features = false }
wasm-instrument = { version = "0.4.0", default-features = false }
wasmi-validation = { version = "0.5.0", default-features = false }
wat = "1.0"

# substrate
sc-client-api = { version = "37.0.0" }
sc-consensus = { version = "0.44.0" }
frame-support = { version = "38.2.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
pallet-assets = { version = "40.0.0", default-features = false }
pallet-balances = { version = "39.0.0", default-features = false }
pallet-sudo = { version = "38.0.0", default-features = false }
pallet-timestamp = { version = "37.0.0", default-features = false }
pallet-transaction-payment = { version = "38.0.2", default-features = false }
sc-transaction-pool-api = { version = "37.0.0" }
sp-api = { version = "34.0.0", default-features = false }
sp-arithmetic = { version = "26.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-blockchain = { version = "37.0.1" }
sp-consensus = { version = "0.40.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-keyring = { version = "39.0.0", default-features = false }
sp-runtime = { version = "39.0.5", default-features = false }
substrate-prometheus-endpoint = { version = "0.17.0", default-features = false }

# frontier
fp-evm = { git = "https://github.com/noirhq/frontier", branch = "crates.io/stable2409", default-features = false }
fp-self-contained = { git = "https://github.com/noirhq/frontier", branch = "crates.io/stable2409", default-features = false }
pallet-ethereum = { git = "https://github.com/noirhq/frontier", branch = "crates.io/stable2409", default-features = false }
pallet-evm = { git = "https://github.com/noirhq/frontier", branch = "crates.io/stable2409", default-features = false }
pallet-evm-precompile-blake2 = { git = "https://github.com/noirhq/frontier", branch = "crates.io/stable2409", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/noirhq/frontier", branch = "crates.io/stable2409", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/noirhq/frontier", branch = "crates.io/stable2409", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/noirhq/frontier", branch = "crates.io/stable2409", default-features = false }
precompile-utils = { git = "https://github.com/noirhq/frontier", branch = "crates.io/stable2409", default-features = false }

# noir
cosmos-rpc = { path = "frame/cosmos/rpc", default-features = false }
cosmos-runtime-api = { path = "frame/cosmos/runtime-api", default-features = false }
frame-babel = { path = "frame/babel", default-features = false }
nc-consensus-pow = { path = "client/consensus/pow" }
noir-core-primitives = { path = "core-primitives", default-features = false }
noir-runtime-common = { path = "runtime/common", default-features = false }
np-babel = { path = "primitives/babel", default-features = false }
np-consensus-pow = { path = "primitives/consensus/pow", default-features = false }
np-cosmos = { path = "primitives/cosmos", default-features = false }
np-ethereum = { path = "primitives/ethereum", default-features = false }
np-multimap = { path = "primitives/multimap", default-features = false }
np-nostr = { path = "primitives/nostr", default-features = false }
np-runtime = { path = "primitives/runtime", default-features = false }
np-solana = { path = "primitives/solana", default-features = false }
pallet-cosmos = { path = "frame/cosmos", default-features = false }
pallet-cosmos-types = { path = "frame/cosmos/types", default-features = false }
pallet-cosmos-x-auth = { path = "frame/cosmos/x/auth", default-features = false }
pallet-cosmos-x-auth-migrations = { path = "frame/cosmos/x/auth/migrations", default-features = false }
pallet-cosmos-x-auth-signing = { path = "frame/cosmos/x/auth/signing", default-features = false }
pallet-cosmos-x-bank = { path = "frame/cosmos/x/bank", default-features = false }
pallet-cosmos-x-bank-types = { path = "frame/cosmos/x/bank/types", default-features = false }
pallet-cosmos-x-wasm = { path = "frame/cosmos/x/wasm", default-features = false }
pallet-cosmos-x-wasm-types = { path = "frame/cosmos/x/wasm/types", default-features = false }
pallet-multimap = { path = "frame/multimap", default-features = false }
pallet-solana = { path = "frame/solana", default-features = false }
pallet-wtema = { path = "frame/wtema", default-features = false }

# vendor
composable-support = { path = "vendor/composable/composable-support", default-features = false }
cosmwasm-rpc = { path = "vendor/composable/cosmwasm/rpc" }
cosmwasm-runtime-api = { path = "vendor/composable/cosmwasm/runtime-api", default-features = false }
cosmwasm-std = { path = "vendor/cosmwasm/std", default-features = false }
cosmwasm-vm = { path = "vendor/composable/vm", default-features = false }
cosmwasm-vm-wasmi = { path = "vendor/composable/vm-wasmi", default-features = false }
pallet-cosmwasm = { path = "vendor/composable/cosmwasm", default-features = false }
pallet-evm-precompileset-assets-erc20 = { path = "vendor/moonbeam/precompiles/assets-erc20", default-features = false }
pallet-evm-precompile-balances-erc20 = { path = "vendor/moonbeam/precompiles/balances-erc20", default-features = false }
solana-address-lookup-table-program = { path = "vendor/solana/programs/address-lookup-table", default-features = false }
solana-bpf-loader-program = { path = "vendor/solana/programs/bpf_loader", default-features = false }
solana-compute-budget = { path = "vendor/solana/compute-budget", default-features = false }
solana-compute-budget-program = { path = "vendor/solana/programs/compute-budget", default-features = false }
solana-curve25519 = { path = "vendor/solana/curves/curve25519", default-features = false }
solana-inline-spl = { path = "vendor/solana/inline-spl", default-features = false }
solana-loader-v4-program = { path = "vendor/solana/programs/loader-v4", default-features = false }
solana-measure = { path = "vendor/solana/measure", default-features = false }
solana-metrics = { path = "vendor/solana/metrics" }
solana-poseidon = { path = "vendor/solana/poseidon", default-features = false }
solana-program-runtime = { path = "vendor/solana/program-runtime", default-features = false }
solana-rpc-client-api = { path = "vendor/solana/rpc-client-api", default-features = false }
solana-system-program = { path = "vendor/solana/programs/system", default-features = false }
spl-token = { path = "vendor/solana/programs/token" }

solana-runtime-api = { path = "frame/solana/runtime-api", default-features = false }

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"

lto = "fat"
codegen-units = 1
