[package]
name = "noir-core-primitives"
version = "0.1.0"
license = "GPL-3.0-or-later"

authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
np-runtime = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"np-runtime/std",
	"sp-core/std",
	"sp-runtime/std",
]
