[package]
name = "noir-core-primitives"
description = "Noir core primitive types"
license = "Apache-2.0"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
np-runtime = { workspace = true }

[features]
default = ["std"]
std = ["np-runtime/std"]
