[package]
name = "noir-node"
version = "0.4.0"
authors = ["Haderech Pte. Ltd."]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/noirhq/noir.git"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
futures = { version = "0.3", features = ["thread-pool"] }
serde_json = "1.0"
jsonrpsee = { version = "0.23", features = ["server"] }
frame-babel = { workspace = true, default-features = true }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
noir-solochain-runtime = { workspace = true, default-features = true }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }

[features]
default = []
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"noir-solochain-runtime/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"noir-solochain-runtime/try-runtime",
	"sp-runtime/try-runtime",
]
